# INTERSECT

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: release.yml
project/: CMakeLists.txt
project/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
project/src/audio/: GrainEngine.cpp  LazyChopEngine.cpp  LazyChopEngine.h  SampleData.cpp  SampleData.h  Slice.h  SliceManager.cpp  SliceManager.h  Voice.h  VoicePool.cpp  VoicePool.h  WsolaEngine.cpp  WsolaEngine.h  bungee_msvc_compat.h
project/src/audio/msvc_compat/: unistd.h
project/src/params/: ParamIds.h  ParamLayout.cpp
project/src/ui/: ActionPanel.cpp  ActionPanel.h  AutoChopPanel.cpp  AutoChopPanel.h  HeaderBar.cpp  HeaderBar.h  IntersectLookAndFeel.cpp  IntersectLookAndFeel.h  ScrollZoomBar.cpp  ScrollZoomBar.h  SliceControlBar.cpp  SliceControlBar.h  SliceLane.cpp  SliceLane.h  SliceListPanel.cpp  SliceListPanel.h  ThemeData.h  TuckersLookAndFeel.cpp  TuckersLookAndFeel.h  WaveformCache.cpp  WaveformCache.h  WaveformView.cpp  WaveformView.h
src/: Constants.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RtText.h  StandaloneApp.cpp  UndoManager.h
src/audio/: AdsrEnvelope.h  AudioAnalysis.h  GrainEngine.cpp  GrainEngine.h  LazyChopEngine.cpp  LazyChopEngine.h  OrtBundleDownloadJob.cpp  OrtBundleDownloadJob.h  SampleData.cpp  SampleData.h  Slice.h  SliceManager.cpp  SliceManager.h  StemModelDownloadJob.cpp  StemModelDownloadJob.h  StemSeparation.cpp  StemSeparation.h  StemSeparationJob.cpp  StemSeparationJob.h  SvfFilter.h  Voice.h  VoicePool.cpp  VoicePool.h
src/params/: GlobalParamSnapshot.h  ParamIds.h  ParamLayout.cpp  ParamLayout.h  ParamUndoState.h
src/ui/: ActionPanel.cpp  ActionPanel.h  AutoChopPanel.cpp  AutoChopPanel.h  HeaderBar.cpp  HeaderBar.h  IntersectLookAndFeel.cpp  IntersectLookAndFeel.h  LinuxDesktopSupport.h  SampleLane.cpp  SampleLane.h  ScrollZoomBar.cpp  ScrollZoomBar.h  SignalChainBar.cpp  SignalChainBar.h  SliceControlBar.cpp  SliceControlBar.h  SliceLane.cpp  SliceLane.h  StemExportPanel.cpp  StemExportPanel.h  ThemeData.h  WaveformCache.cpp  WaveformCache.h  WaveformView.cpp  WaveformView.h
themes/: callisto.intersectstyle  dark.intersectstyle  dark.yaml  koda.intersectstyle  light.intersectstyle  light.yaml  oc.intersectstyle  rose-pine.intersectstyle  studio98.intersectstyle
